@@ -135,6 +135,8 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 75. slowq-send.c, todo-proc.c: in todo-processor changed variable type to
     char when reading single byte from send process
 76. timeoutconn.c - Converted functions to ANSIC prototype
+- 25/11/2022
+77. svctool: include output of --dumpconfig, --print-all-variables in backup
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
